# Battleship

./: CMakeLists.txt  KodethonBattleShip  main.cpp
MVC/: AiPlayer.cpp  AiPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Controller.cpp  Controller.h  GameAttributes.cpp  GameAttributes.h  HumanPlayer.cpp  HumanPlayer.h  Model.cpp  Model.h  Player.cpp  Player.h  ShipPlacement.cpp  ShipPlacement.h
